_generated-doc/2.7/config/quarkus-oidc-oidc-tenant-config-roles.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-oidc-tenant-config-roles_configuration]]link:#quarkus-oidc-oidc-tenant-config-roles_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-oidc-tenant-config-roles_quarkus.oidc.roles.role-claim-path]]`link:#quarkus-oidc-oidc-tenant-config-roles_quarkus.oidc.roles.role-claim-path[quarkus.oidc.roles.role-claim-path]`

[.description]
--
List of paths to claims containing an array of groups. Each path starts from the top level JWT JSON object and can contain multiple segments where each segment represents a JSON object name only, example: "realm/groups". Use double quotes with the namespace qualified claim names. This property can be used if a token has no 'groups' claim but has the groups set in one or more different claims.
--|list of string 
|


a| [[quarkus-oidc-oidc-tenant-config-roles_quarkus.oidc.roles.role-claim-separator]]`link:#quarkus-oidc-oidc-tenant-config-roles_quarkus.oidc.roles.role-claim-separator[quarkus.oidc.roles.role-claim-separator]`

[.description]
--
Separator for splitting a string which may contain multiple group values. It will only be used if the "role-claim-path" property points to one or more custom claims whose values are strings. A single space will be used by default because the standard 'scope' claim may contain a space separated sequence.
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-roles_quarkus.oidc.roles.source]]`link:#quarkus-oidc-oidc-tenant-config-roles_quarkus.oidc.roles.source[quarkus.oidc.roles.source]`

[.description]
--
Source of the principal roles.
--|`idtoken`, `accesstoken`, `userinfo` 
|


a| [[quarkus-oidc-oidc-tenant-config-roles_quarkus.oidc.-tenant-.roles.role-claim-path]]`link:#quarkus-oidc-oidc-tenant-config-roles_quarkus.oidc.-tenant-.roles.role-claim-path[quarkus.oidc."tenant".roles.role-claim-path]`

[.description]
--
List of paths to claims containing an array of groups. Each path starts from the top level JWT JSON object and can contain multiple segments where each segment represents a JSON object name only, example: "realm/groups". Use double quotes with the namespace qualified claim names. This property can be used if a token has no 'groups' claim but has the groups set in one or more different claims.
--|list of string 
|


a| [[quarkus-oidc-oidc-tenant-config-roles_quarkus.oidc.-tenant-.roles.role-claim-separator]]`link:#quarkus-oidc-oidc-tenant-config-roles_quarkus.oidc.-tenant-.roles.role-claim-separator[quarkus.oidc."tenant".roles.role-claim-separator]`

[.description]
--
Separator for splitting a string which may contain multiple group values. It will only be used if the "role-claim-path" property points to one or more custom claims whose values are strings. A single space will be used by default because the standard 'scope' claim may contain a space separated sequence.
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-roles_quarkus.oidc.-tenant-.roles.source]]`link:#quarkus-oidc-oidc-tenant-config-roles_quarkus.oidc.-tenant-.roles.source[quarkus.oidc."tenant".roles.source]`

[.description]
--
Source of the principal roles.
--|`idtoken`, `accesstoken`, `userinfo` 
|

|===