_generated-doc/3.8/config/quarkus-oidc-oidc-tenant-config-roles.adoc

:summaryTableId: quarkus-oidc-oidc-tenant-config-roles
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-oidc-tenant-config-roles_configuration]]link:#quarkus-oidc-oidc-tenant-config-roles_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-oidc-tenant-config-roles_quarkus-oidc-roles-role-claim-path]]`link:#quarkus-oidc-oidc-tenant-config-roles_quarkus-oidc-roles-role-claim-path[quarkus.oidc.roles.role-claim-path]`


[.description]
--
A list of paths to claims containing an array of groups. Each path starts from the top level JWT JSON object and can contain multiple segments. Each segment represents a JSON object name only; for example: "realm/groups". Use double quotes with the namespace-qualified claim names. This property can be used if a token has no `groups` claim but has the groups set in one or more different claims.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_ROLES_ROLE_CLAIM_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_ROLES_ROLE_CLAIM_PATH+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-oidc-oidc-tenant-config-roles_quarkus-oidc-roles-role-claim-separator]]`link:#quarkus-oidc-oidc-tenant-config-roles_quarkus-oidc-roles-role-claim-separator[quarkus.oidc.roles.role-claim-separator]`


[.description]
--
The separator for splitting strings that contain multiple group values. It is only used if the "role-claim-path" property points to one or more custom claims whose values are strings. A single space is used by default because the standard `scope` claim can contain a space-separated sequence.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_ROLES_ROLE_CLAIM_SEPARATOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_ROLES_ROLE_CLAIM_SEPARATOR+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-roles_quarkus-oidc-roles-source]]`link:#quarkus-oidc-oidc-tenant-config-roles_quarkus-oidc-roles-source[quarkus.oidc.roles.source]`


[.description]
--
Source of the principal roles.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_ROLES_SOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_ROLES_SOURCE+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:idtoken[ID Token - the default value for the `web-app` applications.], tooltip:accesstoken[Access Token - the default value for the `service` applications; can also be used as the source of roles for the `web-app` applications.], tooltip:userinfo[User Info] 
|


a| [[quarkus-oidc-oidc-tenant-config-roles_quarkus-oidc-tenant-roles-role-claim-path]]`link:#quarkus-oidc-oidc-tenant-config-roles_quarkus-oidc-tenant-roles-role-claim-path[quarkus.oidc."tenant".roles.role-claim-path]`


[.description]
--
A list of paths to claims containing an array of groups. Each path starts from the top level JWT JSON object and can contain multiple segments. Each segment represents a JSON object name only; for example: "realm/groups". Use double quotes with the namespace-qualified claim names. This property can be used if a token has no `groups` claim but has the groups set in one or more different claims.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__ROLES_ROLE_CLAIM_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__ROLES_ROLE_CLAIM_PATH+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-oidc-oidc-tenant-config-roles_quarkus-oidc-tenant-roles-role-claim-separator]]`link:#quarkus-oidc-oidc-tenant-config-roles_quarkus-oidc-tenant-roles-role-claim-separator[quarkus.oidc."tenant".roles.role-claim-separator]`


[.description]
--
The separator for splitting strings that contain multiple group values. It is only used if the "role-claim-path" property points to one or more custom claims whose values are strings. A single space is used by default because the standard `scope` claim can contain a space-separated sequence.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__ROLES_ROLE_CLAIM_SEPARATOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__ROLES_ROLE_CLAIM_SEPARATOR+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-roles_quarkus-oidc-tenant-roles-source]]`link:#quarkus-oidc-oidc-tenant-config-roles_quarkus-oidc-tenant-roles-source[quarkus.oidc."tenant".roles.source]`


[.description]
--
Source of the principal roles.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__ROLES_SOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__ROLES_SOURCE+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:idtoken[ID Token - the default value for the `web-app` applications.], tooltip:accesstoken[Access Token - the default value for the `service` applications; can also be used as the source of roles for the `web-app` applications.], tooltip:userinfo[User Info] 
|

|===